--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">FotosBootcamp</string>
     <string name="selected_image">Imagem a ser selecionada pelo usuário</string>
     <string name="select_button">Selecione uma imagem</string>
+    <string name="camera_button">Tirar uma foto</string>
 </resources>
